remove unused classes and methods